Added Autorization Feature and Docs
