# app.js
@@ -2,20 +2,12 @@ require('dotenv').config()
 
 const express = require('express')
 const bodyParser = require('body-parser')
-const swaggerUi = require('swagger-ui-express')
-const YAML = require('yamljs')
-const swaggerDoc = YAML.load('./swagger.yaml')
 
-const toolsRouter = require('./routes/tools')
-const authRouter = require('./routes/auth')
+const Routes = require('./routes')
 
 const app = express()
 
 app.use(bodyParser.json())
-
-app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDoc))
-app.use('/auth', authRouter)
-app.use('/tools', toolsRouter)
-
+app.use(Routes)
 
 module.exports = app
