# routes/admin.js
@@ -1,0 +1,10 @@
+const express = require('express')
+const router = express.Router()
+
+const { permission } = require('../controllers/auth')
+
+router
+    .use('/', permission('admin'))
+    .get('/', (req, res) => res.status(200).json())
+
+module.exports = router
